[package]
name = "phansar"
version = "0.1.0"
authors = ["Hansel De La Cruz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "1.0.40"
bytemuck = { version = "1.5.1", features = ["derive"] }
cgmath = "0.18.0"
derive_builder = "0.10.2"
derive_more = "0.99.14"
env_logger = "0.8.3"
futures = "0.3.15"
image = "0.23.14"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wgpu = "0.8.1"
winit = "0.25.0"

[build-dependencies]
chrono = "0.4.19"
fs_extra = "1.2.0"
