[package]
name = "phansar-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
derive_builder = "0.10.2"
derive_more = "0.99.14"
env_logger = "0.8.4"
log = "0.4.14"
tokio = { version = "1.6.2", features = ["full"] }
